--- a/main.css
+++ b/main.css
@@ -65,7 +65,7 @@ h1, h2 {
 	color: #000000;
 }
 body {
-	background-image: url(../images/fresh_snow.png);
+	background-image: url(fresh_snow.png);
 }
 #wrapper img {
 	margin-right: center;
