--- a/tablet/assets/css/style.css
+++ b/tablet/assets/css/style.css
@@ -100,11 +100,16 @@ div#message
 }
 
 
-div#map_pane, div#interactive_mode_pane, div#end_tour_pane
+div#map_pane
+{
+	opacity: 0;
+	height: 200px;
+}
+
+div#interactive_mode_pane, div#end_tour_pane
 {
 	opacity: 0;
 }
-
 .marker
 {
 	position: absolute;
