--- a/tablet/assets/css/style.css
+++ b/tablet/assets/css/style.css
@@ -73,7 +73,8 @@ div#begin_tour_button
 	border-top-left-radius: 16px;
 	border-top-right-radius: 16px;
 	border-bottom-left-radius: 16px;
-	border-bottom-right-radius: 16px;		
+	border-bottom-right-radius: 16px;	
+	z-index:100;	
 }
 
 div#begin_tour_button:hover
