--- a/tablet/assets/css/style.css
+++ b/tablet/assets/css/style.css
@@ -2,8 +2,8 @@
 
 body
 {
-	background-image: url(../img/binding_light.png)
-	width: 1920;
+	background-image: url(../img/binding_light.png);
+	background-repeat: no-repeat;
 }
 
 div.button
@@ -127,6 +127,7 @@ div#map_pane
 div#interactive_mode_pane, div#end_tour_pane
 {
 	opacity: 0;
+	background-repeat: no-repeat;
 }
 .marker
 {
