--- a/tablet/assets/css/style.css
+++ b/tablet/assets/css/style.css
@@ -1,10 +1,5 @@
 * { margin:0; padding:0; }
 
-html
-{
-	width: 1280;
-}
-
 body
 {
 	background-image: url(../img/binding_light.png);
@@ -37,6 +32,7 @@ div#footer
 	width:1280px;
 	height:100px;
 	text-align: center;
+	z-index: 100;
 }
 
 div#footer div.button
@@ -126,6 +122,7 @@ div#map_pane
 	position:absolute;
 	top:50px;
 	left:0;
+	z-index: 99;
 }
 
 div#interactive_mode_pane, div#end_tour_pane
