--- a/app/www/assets/css/style.css
+++ b/app/www/assets/css/style.css
@@ -12,24 +12,28 @@ div.button
 
 h1#header
 {
+	position:absolute;
+	top:0;
+	left:0;
 	text-align: center;
 	font-family: Georgia;
 	font-size:32px;
 	font-weight:bold;
 	background: #000;
 	height:50px;
-	width: 1280px;
+	width: 960px;
 	line-height: 50px;
 	color:#fff;
+	z-index:1000;
 }
 
 div#footer
 {
 	position:absolute;
-	top: 700px;
+	top: 477px;
 	left:0;
-	width:1280px;
-	height:100px;
+	width:960px;
+	height:75px;
 	text-align: center;
 	z-index: 100;
 }
@@ -38,13 +42,13 @@ div#footer div.button
 {
 	color:#eee;
 	font-weight: bold;
-	font-size:32px;
-	height:100px;
-	width:300px;
+	font-size:28px;
+	height:75px;
+	width:250px;
 	float:left;
 	text-align:center;
 	background: #000;
-	line-height: 100px;
+	line-height: 75px;
 }
 
 div#footer div.button:hover
@@ -54,22 +58,22 @@ div#footer div.button:hover
 
 div#footer div#interactive_mode_button
 {
-	margin:0 190px;
+	margin:0 105px;
 }
 
 div#begin_tour_button
 {
 	position:absolute;
-	left:465px;
-	top:400px;
+	left:330px;
+	top:320px;
 	color:#eee;
 	font-weight: bold;
 	font-size:32px;
 	text-align: center;
 	background: #000;
-	height:150px;
-	width:350px;
-	line-height: 150px;
+	height:100px;
+	width:300px;
+	line-height: 100px;
 	border-top-left-radius: 16px;
 	border-top-right-radius: 16px;
 	border-bottom-left-radius: 16px;
@@ -84,15 +88,15 @@ div#begin_tour_button:hover
 
 div#message
 {
-	margin-top:60px;
-	margin-left:240px;
-	font-size:32px;
+	margin-top:100px;
+	margin-left:130px;
+	font-size:26px;
 	font-family:georgia;
 	font-style: italic;
 	font-weight: bold;
-	line-height:50px;
+	line-height:40px;
 	text-align: center;
-	width:800px;
+	width:700px;
 }
 
 div#message_end
@@ -125,11 +129,22 @@ div#map_pane
 
 div#interactive_mode_pane
 {
+	position:absolute;
+	top:0;
+	left:0;
 	opacity: 0;
+	width: 960px;
+	height: 552px;
+	overflow:hidden;
+	background-image:url('../img/camera.png');
+	background-repeat:no-repeat;
 }
 
 div#end_tour_pane
 {
+	position:absolute;
+	top:0;
+	left:0;
 	opacity: 0;
 }
 
@@ -159,15 +174,20 @@ div#welcome_button, div#end_tour_button
 
 div#map_pane 
 {
-    height: 100%;
-    height:750px; 
-    width:1280px;
+	position:absolute;
+	top:0;
+	left:0;
+    height:552px; 
+    width:960px;
 }
 
 div#welcome_pane
 {
-	width: 1280px;
-	height: 800px;
+	position:absolute;
+	top:0;
+	left:0;
+	width: 960px;
+	height: 552px;
 }
 
 div#map_robot_marker
