--- a/app/platforms/android/res/xml/config.xml
+++ b/app/platforms/android/res/xml/config.xml
@@ -4,6 +4,9 @@
     <feature name="App">
         <param name="android-package" value="org.apache.cordova.App" />
     </feature>
+    <feature name="Camera">
+        <param name="android-package" value="org.apache.cordova.camera.CameraLauncher" />
+    </feature>
     <name>Roslyn</name>
     <description>
         A sample Apache Cordova application that responds to the deviceready event.
